--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>H5 游戏平台</title>
+  <title>H5</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header>
-    <h1>H5 游戏平台</h1>
+    <h1>H5</h1>
   </header>
 
   <main>
@@ -20,7 +20,7 @@
   </main>
 
   <footer>
-    <p>© 2024 H5 游戏平台</p>
+    <p>© 2024 H5</p>
   </footer>
 
   <script src="games.js"></script>
